--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,7 @@ services:
   frontend:
     container_name: log4j-collector-frontend
     image: ghcr.io/bluestoneag/log4j-collector-frontend:latest
-    build:
-      context: .
-      args:
-        - API_ADDR=192.168.1.1
-    volumes:
-      - "./:/app"
-      - "/app/node_modules"
+    environment:
+      - API_URL=http://localhost:8080/api/v1/reports
     ports:
       - 80:80
