--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,4 +8,4 @@ jobs:
       - uses: actions/checkout@v2
       - uses: borales/actions-yarn@v2.3.0
         with:
-          cmd: install --frozen-lockfile # will run `yarn install` command
+          cmd: install --immutable # will run `yarn install` command
